--- a/src/components/layout/NavBar.module.css
+++ b/src/components/layout/NavBar.module.css
@@ -72,42 +72,57 @@
   align-items: center;
   gap: 8px;
   cursor: pointer;
+  width: 246px;
+  justify-content: center;
+  color: rgba(40, 167, 69, 1);
+  font-family: "Vazirmatn";
+  font-size: 18px;
+  font-weight: 200;
 }
 
 .dropdownContent {
   position: absolute;
-  top: 100%;
-  right: 0;
   background: white;
-  border-radius: 5px;
+  border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  min-width: 150px;
-  padding: 10px;
+  width: 246px;
   opacity: 0;
   visibility: hidden;
   transform: translateY(10px);
   transition: opacity 0.3s ease, transform 0.3s ease;
+  padding-bottom: 12px;
 }
 
-/* Show dropdown on hover */
 .dropdown:hover .dropdownContent {
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
 }
 
-/* Dropdown items */
-.dropdownContent a {
-  display: flex;
+.dropdownContent p {
   align-items: center;
-  gap: 10px;
-  padding: 8px;
+  display: block;
+  padding: auto;
   text-decoration: none;
   color: black;
   font-size: 14px;
-  transition: background 0.2s;
+  cursor: default;
+  justify-content: center;
 }
 
-.dropdownContent a:hover {
+.dropdownContent div:hover {
   background: rgba(0, 0, 0, 0.05);
+}
+.logoutButton {
+  background-color: inherit;
+  cursor: pointer !important;
+}
+.ropdownList {
+  display: flex;
+  height: 44px;
+  align-items: baseline;
+}
+.authButton {
+  border: none;
+  cursor: pointer;
 }
