--- a/src/components/templates/BankAccountForm.module.css
+++ b/src/components/templates/BankAccountForm.module.css
@@ -6,6 +6,7 @@
   border-radius: 10px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
+  padding: 16px;
 }
 
 .title {
@@ -18,55 +19,67 @@
 
 .label {
   margin-right: 32px;
-  margin-left: 40px;
   font-size: 14px;
   color: #333;
   font-family: var(--font-yekan);
+  margin-top: 12px;
+  margin-left: 32px;
 }
 
 .input {
   font-family: var(--font-yekan);
   font-size: 14px;
-  background-color: #fff;
+  padding: 8px;
+  background-color: #fff !important;
+  margin-top: 4px;
+  margin-right: 35px;
+  width: 30%;
 }
 
 .input:disabled {
   cursor: not-allowed;
+  background-color: #f5f5f5;
 }
 
 .button {
   margin-top: 16px;
-  align-items: left;
-  padding: 10px;
+  align-items: center;
   color: rgba(0, 158, 202, 1);
   border: none;
-  background-color: white !important;
+  background-color: white;
   font-size: 14px;
   font-family: var(--font-yekan);
   cursor: pointer;
-  margin-left: 50px;
+  margin-left: 35px;
+  margin-right: 550px;
+  align-items: center;
+  gap: 6px;
 }
 
 .button:hover {
-  background-color: #0056b3;
+  background-color: rgba(0, 158, 202, 0.1);
+}
+
+.submitButton {
+  width: 100%;
+  padding: 10px;
+  background-color: rgba(0, 158, 202, 1);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  font-family: var(--font-yekan);
+  cursor: pointer;
+  margin-top: 16px;
+}
+
+.submitButton:hover {
+  background-color: #0077a3;
 }
 
 .error {
   color: red;
   font-size: 12px;
-}
-.firstRow {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 30px;
-}
-.secondRow {
-  display: flex;
-  gap: 150px;
-  padding-bottom: 30px;
-}
-.thirdRow {
-  display: flex;
-  gap: 250px;
-  padding-bottom: 30px;
+  margin-top: 4px;
+  display: block;
 }
